@@ -1,10 +1,13 @@
-# $Cambridge: exim/exim-src/OS/Makefile-HP-UX,v 1.3 2005/08/08 10:32:58 ph10 Exp $
+# $Cambridge: exim/exim-src/OS/Makefile-HP-UX,v 1.4 2005/08/08 10:48:27 ph10 Exp $
 
 # Exim: OS-specific make file for HP-UX later than 9
 
 # HP ANSI C compiler
 #CC=cc
 #CFLAGS=+O2 +Onolimit -z -D_XOPEN_SOURCE_EXTENDED
+# Users of the A.06.00 compiler might need to use +O1 rather than +O2 as
+# there have been some problems reported with this compiler with +O2 set.
+
 # gcc
 CFLAGS=-O -Wl,-z -D_XOPEN_SOURCE_EXTENDED
 
